--- a/index.css
+++ b/index.css
@@ -40,6 +40,12 @@ padding-top: 10px;
     font-size: 20px;
     border: 1px solid gray;
 }
+.filter-btn{
+    margin: 20px 110px;
+    cursor: pointer;
+
+}
+
 .res-card-image{
     width: 100%;
     height: 50%;
