--- a/index.css
+++ b/index.css
@@ -87,3 +87,9 @@ padding-top: 10px;
 .w3-button{
 
 }
+.user-card{
+    margin-top: 30px;
+    margin-left: 30px;
+    border: 2px black solid;
+    width: fit-content;
+}
