--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-.header{
-    display: flex;
+/* .header{
+    display: flex; */
     /* justify-content: space-between; */
-    background-color: rgb(225, 225, 225);
-    height: 100px;
+    /* background-color: rgb(225, 225, 225);
+    height: 100px; */
    
-}
+/* }
     
 .logo{
     width:100px;
@@ -92,4 +92,8 @@ padding-top: 10px;
     margin-left: 30px;
     border: 2px black solid;
     width: fit-content;
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
